--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -3,6 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
+    <item android:title="Home">
+        <menu>
+            <item
+                android:id="@+id/SideHome"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Home" />
+        </menu>
+    </item>
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/SideCourse"
