--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="tabCourseTextColor">#4F2E88</color>
+    <color name="tabCourseSelectedTextColor">#7E57C2</color>
 </resources>
