--- a/app/src/main/res/layout/course_listlayout_x.xml
+++ b/app/src/main/res/layout/course_listlayout_x.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -12,12 +12,36 @@
         />
 
     <TextView
-        android:id="@+id/age"
+        android:id="@+id/semester"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_below="@id/name"
-        android:layout_alignLeft="@id/name"
+        android:layout_below="@id/year"
+        android:layout_alignLeft="@id/year"
+        />
+    <TextView
+        android:id="@+id/courseName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_below="@id/semester"
+        android:layout_alignLeft="@id/semester"
+        />
+    <TextView
+        android:id="@+id/credit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_below="@id/courseName"
+        android:layout_alignLeft="@id/courseName"
+        />
+    <TextView
+        android:id="@+id/index_course"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_below="@id/credit"
+        android:layout_alignLeft="@id/credit"
         />
 
 </RelativeLayout>
