--- a/app/src/main/res/layout/f_course_1st_x.xml
+++ b/app/src/main/res/layout/f_course_1st_x.xml
@@ -1,36 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8FD8AA"
     >
 
-    <ListView
-        android:id="@+id/first_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-<!--
-    <LinearLayout
+    <TableLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
+        <TableRow>
 
-        <TextView
-            android:id="@+id/firstYear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1st" />
-        <TextView
-            android:id="@+id/first_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="first_1" />
-        <TextView
-            android:id="@+id/first_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="first_2" />
-    </LinearLayout>
-    -->
+            <TextView
+                android:id="@+id/year"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="year"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/semester"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="semester"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/courseName"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:text="courseName"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/credit"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="credit"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/index_course"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="index"
+                android:textSize="10sp" />
+        </TableRow>
+    </TableLayout>
+
+
+        <ListView
+            android:id="@+id/first_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
 </LinearLayout>
