--- a/app/src/main/res/layout/f_course_2nd_x.xml
+++ b/app/src/main/res/layout/f_course_2nd_x.xml
@@ -1,29 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#859FC7"
     android:orientation="vertical">
-    <LinearLayout
-        android:orientation="vertical"
+    <TableLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+        <TableRow>
 
-        <TextView
-            android:id="@+id/secondYear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="2nd" />
-        <TextView
-            android:id="@+id/second_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="first_1" />
-        <TextView
-            android:id="@+id/second_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="first_2" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/year"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="year"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/semester"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="semester"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/courseName"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:text="courseName"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/credit"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="credit"
+                android:textSize="10sp" />
+            <TextView
+                android:id="@+id/index_course"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="index"
+                android:textSize="10sp" />
+        </TableRow>
+    </TableLayout>
+
+
+    <ListView
+        android:id="@+id/second_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
