--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#AB47BC</color>
+    <color name="colorPrimaryDark">#7E57C2</color>
     <color name="colorAccent">#D81B60</color>
     <color name="tabCourseTextColor">#4F2E88</color>
     <color name="tabCourseSelectedTextColor">#7E57C2</color>
