--- a/app/src/main/res/layout/f_course_2nd_x.xml
+++ b/app/src/main/res/layout/f_course_2nd_x.xml
@@ -45,9 +45,23 @@
         </TableRow>
     </TableLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1학기"/>
 
     <ListView
         android:id="@+id/second_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2학기"/>
+
+    <ListView
+        android:id="@+id/second_2_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
