--- a/app/src/main/res/layout/f_course_4th_x.xml
+++ b/app/src/main/res/layout/f_course_4th_x.xml
@@ -44,9 +44,23 @@
         </TableRow>
     </TableLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1학기"/>
 
     <ListView
         android:id="@+id/fourth_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2학기"/>
+
+    <ListView
+        android:id="@+id/fourth_2_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
