--- a/app/src/main/res/layout/f_course_2nd_x.xml
+++ b/app/src/main/res/layout/f_course_2nd_x.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#859FC7"
+    android:background="@color/courseBackground"
     android:orientation="vertical">
     <TableLayout
         android:layout_marginLeft="10dp"
