--- a/app/src/main/res/layout/f_course_4th_x.xml
+++ b/app/src/main/res/layout/f_course_4th_x.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7E57C2"
+    android:background="@color/courseBackground"
     >
     <TableLayout
         android:layout_marginLeft="10dp"
