--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,14 @@
     <color name="colorPrimary">#AB47BC</color>
     <color name="colorPrimaryDark">#7E57C2</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    <color name="tabCourseBackground">#D59BDF</color>
     <color name="tabCourseTextColor">#4F2E88</color>
-    <color name="tabCourseSelectedTextColor">#7E57C2</color>
+    <color name="tabCourseSelectedTextColor">#4C2492</color>
+
+
+    <color name="doneBackground">#F2E9F5</color>
+    <color name="nodoneBackground">#FFFFFF</color>
+    <color name="courseBackground">#FFFFFF</color>
 </resources>
