--- a/app/src/main/res/layout/a_english_main_x.xml
+++ b/app/src/main/res/layout/a_english_main_x.xml
@@ -20,9 +20,31 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/englishInfo"/>
+            android:text="[ 영어인증 ]"
+            android:layout_gravity="center"
+            android:textColor="#ab47bc"
+            android:textStyle="bold"
+            android:textSize="25dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="" /> <!-- 공백 -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/englishInfo1"
+            android:textSize="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="" /> <!-- 공백 -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/englishInfo2"
+            android:textSize="20dp"/>
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -36,6 +58,7 @@
 
 
     </LinearLayout>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
