--- a/app/src/main/res/layout/a_volun_main_x.xml
+++ b/app/src/main/res/layout/a_volun_main_x.xml
@@ -8,17 +8,23 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+
+    <include
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20dp">
 
-        <include
-            layout="@layout/app_bar_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="match_parent"
@@ -97,6 +103,9 @@
             </LinearLayout>
         </android.support.design.widget.CoordinatorLayout>
     </LinearLayout>
+
+
+</LinearLayout>
 
 
 
