--- a/app/src/main/res/layout/a_english_main_x.xml
+++ b/app/src/main/res/layout/a_english_main_x.xml
@@ -15,13 +15,13 @@
         <include
             layout="@layout/app_bar_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp" />
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="20dp" >
 
 
             <TextView
